# transidious

./: .gitignore  .stignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  README.md  Transidious.Editor.csproj  Transidious.csproj  Transidious.sln  Unity.Analytics.DataPrivacy.csproj  Unity.CollabProxy.Editor.csproj  Unity.PackageManagerUI.Editor.csproj  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  omnisharp.json  packages.config
Assets/: csc.rsp
Assets/Animations/: LoadingSpinner.anim  UISpinner.controller
Assets/Plugins/: link.xml  (+1 more)
Plugins/: newver.py
Plugins/TriangleAPI/: CMakeCache.txt  CMakeLists.txt  TriangleAPI  cmake_install.cmake  main.cpp
Plugins/UnityTriangle/UnityTriangle/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Plugins/UnityTriangle/UnityTriangle/UnityTriangle/: Info.plist  compile.sh  triangle.c  triangle.cpp  triangle.exp  triangle.lib
Plugins/UnityTriangle/UnityTriangle/UnityTriangle.xcodeproj/: project.pbxproj
Plugins/UnityTriangle/UnityTriangle/UnityTriangle.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Plugins/UnityTriangle/UnityTriangle/UnityTriangle.xcodeproj/project.xcworkspace/xcuserdata/Jonas.xcuserdatad/: UserInterfaceState.xcuserstate
Plugins/UnityTriangle/UnityTriangle/UnityTriangle.xcodeproj/xcuserdata/Jonas.xcuserdatad/xcschemes/: xcschememanagement.plist
ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
TblGen/: CMakeCache.txt  CMakeLists.txt  ImportArea.py  Makefile  cmake_install.cmake  commands.sh  libtransidious-tblgens.dylib  run.sh
TblGen/Backends/: CommandBackend.cpp  Commands.template.cs  OSMImportBackend.cpp  OSMImportHelper.template.cs
TblGen/Files/: Commands.tg  OSMImport.tg  _OSMImport.tg
UserSettings/: EditorUserSettings.asset
(+2898 files in other folders)
